Sign with AGP (#276)

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -6,14 +6,16 @@ on:
     paths-ignore:
     - 'app/**'
     - '**.md'
+    - '.github/workflows/manager.yml'
   pull_request:
     paths-ignore:
     - 'app/**'
     - '**.md'
+    - '.github/workflows/manager.yml'
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ !startsWith(github.event.head_commit.message, '[skip ci]') }}
 
     steps:
