[CI] Use ccache to cache github action building
* Try ccache

* Cache Cmake

* No ccache in gradle cache

Co-authored-by: vvb2060 <vvb2060@gmail.com>

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -47,6 +47,14 @@ jobs:
           gradle-manager-${{ hashFiles('**/*.gradle.kts') }}
           gradle-core
           gradle-
+    - name: Cache Cmake
+      uses: actions/cache@v2
+      with:
+        path: ~/.ccache
+        key: ccache-${{ hashFiles('core/src/main/cpp') }}
+        restore-keys: ccache-
+    - name: Install ccache
+      run: sudo apt-get install -y ccache
     - name: Build with Gradle
       run:  |
         echo 'org.gradle.caching=true' >> gradle.properties
