[core] Print version to logcat (#375)
* [core] Print version to logcat

* [core] Check module id on init

--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -35,6 +35,7 @@ add_definitions(-DRIRU_MODULE)
 add_definitions(-DRIRU_MODULE_API_VERSION=${RIRU_MODULE_API_VERSION})
 add_definitions(-DRIRU_MODULE_VERSION=${RIRU_MODULE_VERSION})
 add_definitions(-DRIRU_MODULE_VERSION_NAME=${RIRU_MODULE_VERSION_NAME})
+add_definitions(-DMODULE_NAME=${MODULE_NAME})
 
 add_subdirectory(main)
 add_subdirectory(external)
