--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -36,31 +36,27 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Cache Gradle
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: gradle-core-${{ hashFiles('**/*.gradle.kts') }}
-        restore-keys: |
-          gradle-manager-${{ hashFiles('**/*.gradle.kts') }}
-          gradle-core
-          gradle-
     - name: Cache Cmake
       uses: actions/cache@v2
       with:
         path: ~/.ccache
-        key: ccache-${{ hashFiles('core/src/main/cpp') }}
-        restore-keys: ccache-
+        key: ccache-${{ github.sha }}
+        restore-keys: ccache
     - name: Install ccache
       run: sudo apt-get install -y ccache
-    - name: Build with Gradle
-      run:  |
-        echo 'org.gradle.caching=true' >> gradle.properties
-        echo 'org.gradle.parallel=true' >> gradle.properties
-        echo 'org.gradle.vfs.watch=true' >> gradle.properties
-        ./gradlew zipRelease zipDebug
+    - uses: burrunan/gradle-cache-action@v1
+      name: Build with Gradle
+      with:
+        job-id: core
+        arguments: | 
+            zipRelease
+            zipDebug
+        gradle-version: wrapper
+        concurrent: true
+        properties: |
+            org.gradle.caching=true
+            org.gradle.parallel=true
+            org.gradle.vfs.watch=true
     - name: Prepare artifact
       if: success()
       id: prepareArtifact
