--- a/core/src/main/cpp/main/CMakeLists.txt
+++ b/core/src/main/cpp/main/CMakeLists.txt
@@ -25,9 +25,10 @@ aux_source_directory(src/jni SRC_JNI_LIST)
 include_directories(include src)
 add_executable(lspd ${SRC_LIST} ${SRC_JNI_LIST})
 
+set(ENV{CCACHE_COMPILERCHECK} "content")
+
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
 
 find_package(riru REQUIRED CONFIG)
-find_package(dobby REQUIRED CONFIG)
 find_library(log-lib log)
-target_link_libraries(lspd yahfa riru::riru android dobby::dobby dex_builder ${log-lib})
+target_link_libraries(lspd yahfa riru::riru android dobby dex_builder libcxx ${log-lib})
