[core] Strip .preinit_array (#425)

--- a/core/src/main/cpp/main/CMakeLists.txt
+++ b/core/src/main/cpp/main/CMakeLists.txt
@@ -25,8 +25,11 @@ aux_source_directory(src/jni SRC_JNI_LIST)
 include_directories(include src)
 add_executable(lspd ${SRC_LIST} ${SRC_JNI_LIST})
 
-SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
 
 find_package(riru REQUIRED CONFIG)
 find_library(log-lib log)
 target_link_libraries(lspd yahfa riru::riru android dobby dex_builder libcxx ${log-lib})
+
+add_custom_command(TARGET lspd POST_BUILD
+        COMMAND ${CMAKE_STRIP} --remove-section=.preinit_array "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lspd")
