[core] Fix ccache on master build (#435)

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -52,9 +52,12 @@ jobs:
         key: ccache-cache-${{ github.sha }}
         restore-keys: ccache-cache-
     - name: Install ccache
-      run: sudo apt-get install -y ccache
+      run: |
+        sudo apt-get install -y ccache
+        ccache -o max_size=2G
+        ccache -o hash_dir=false
     - name: Build with Gradle
-      run:  |
+      run: |
         echo 'org.gradle.caching=true' >> gradle.properties
         echo 'org.gradle.parallel=true' >> gradle.properties
         echo 'org.gradle.vfs.watch=true' >> gradle.properties
