--- a/core/src/main/cpp/main/CMakeLists.txt
+++ b/core/src/main/cpp/main/CMakeLists.txt
@@ -20,10 +20,13 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
+configure_file(template/config.cpp src/config.cpp)
+
 aux_source_directory(src SRC_LIST)
 aux_source_directory(src/jni SRC_JNI_LIST)
 include_directories(include src)
-add_executable(lspd ${SRC_LIST} ${SRC_JNI_LIST})
+
+add_executable(lspd ${SRC_LIST} ${SRC_JNI_LIST} ${CMAKE_CURRENT_BINARY_DIR}/src/config.cpp)
 
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
 
