[core] No more PIE

--- a/core/src/main/cpp/main/CMakeLists.txt
+++ b/core/src/main/cpp/main/CMakeLists.txt
@@ -26,14 +26,11 @@ aux_source_directory(src SRC_LIST)
 aux_source_directory(src/jni SRC_JNI_LIST)
 include_directories(include src)
 
-add_executable(lspd ${SRC_LIST} ${SRC_JNI_LIST} ${CMAKE_CURRENT_BINARY_DIR}/src/config.cpp)
-
-SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
+add_library(lspd SHARED ${SRC_LIST} ${SRC_JNI_LIST} ${CMAKE_CURRENT_BINARY_DIR}/src/config.cpp)
 
 find_package(riru REQUIRED CONFIG)
 find_library(log-lib log)
 target_link_libraries(lspd yahfa riru::riru android dobby dex_builder libcxx ${log-lib})
 
 add_custom_command(TARGET lspd POST_BUILD
-        COMMAND ${CMAKE_STRIP} --remove-section=.preinit_array --remove-section=.comment
-        -g "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/lspd")
+        COMMAND ${CMAKE_STRIP} --remove-section=.comment -g "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/liblspd.so")
