[CI] Remove gradle wrapper if more than one (#686)

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -56,6 +56,7 @@ jobs:
         ccache -o hash_dir=false
     - name: Build with Gradle
       run: |
+        [ $(du -s ~/.gradle/wrapper | awk '{ print $1 }') -gt 250000 ] && rm -rf ~/.gradle/wrapper/*
         echo 'org.gradle.caching=true' >> gradle.properties
         echo 'org.gradle.parallel=true' >> gradle.properties
         echo 'org.gradle.vfs.watch=true' >> gradle.properties
