[gradle] misc changes (#839)

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -73,6 +73,7 @@ jobs:
         echo 'org.gradle.parallel=true' >> gradle.properties
         echo 'org.gradle.vfs.watch=true' >> gradle.properties
         echo 'org.gradle.jvmargs=-Xmx2048m' >> gradle.properties
+        echo 'android.native.buildOutput=verbose' >> gradle.properties
         ./gradlew zipRelease zipDebug
     - name: Prepare artifact
       if: success()
