--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -63,6 +63,7 @@ jobs:
         sudo apt-get install -y ccache
         ccache -o max_size=2G
         ccache -o hash_dir=false
+        ccache -o compiler_check=content
     - name: Build with Gradle
       env:
         NDK_CCACHE: ccache
