Revert "[app] Dynamic registration receiver (#918)" (#920)
This reverts commit 35d8f3c1ce7baf84d5a61ff0005139b5f2589e36.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,18 @@
             android:name=".ui.activity.CrashReportActivity"
             android:process=":error_activity" />
 
+        <receiver
+            android:name=".receivers.ServiceReceiver"
+            android:exported="true"
+            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL">
+            <intent-filter>
+                <action android:name="org.lsposed.action.MODULE_UPDATED" />
+                <action android:name="org.lsposed.action.MODULE_NOT_ACTIVATAED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
