--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,18 +33,18 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:hasFragileUserData="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:hasFragileUserData="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:targetApi="q">
         <activity
             android:name=".ui.activity.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:exported="true">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
@@ -59,17 +59,7 @@
             android:name=".ui.activity.CrashReportActivity"
             android:process=":error_activity" />
 
-        <receiver
-            android:name=".receivers.ServiceReceiver"
-            android:exported="true"
-            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL">
-            <intent-filter>
-                <action android:name="org.lsposed.action.MODULE_UPDATED" />
-                <action android:name="org.lsposed.action.MODULE_NOT_ACTIVATAED" />
-
-                <data android:scheme="package" />
-            </intent-filter>
-        </receiver>
+        <receiver android:name=".receivers.ServiceReceiver" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
