--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
-        android:name="android.permission.INTERACT_ACROSS_USERS"
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission
         android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
 
@@ -57,7 +54,7 @@
         </activity>
         <activity
             android:name=".ui.activity.CrashReportActivity"
-            android:process=":error_activity" />
+            android:process=":error" />
 
         <receiver android:name=".receivers.ServiceReceiver" />
 
