--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Ask a question
-    url: https://github.com/LSPosed/LSPosed/discussions
+    url: https://github.com/LSPosed/LSPosed/discussions/new?category=Q-A
     about: Please ask and answer questions here.
+  - name: Official Telegram Channel
+    url: https://t.me/LSPosed
+    about: Subscribe for notifications and releases
