--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.enableAppCompileTimeRClass=true
+android.enableR8.fullMode=true
 android.nonTransitiveRClass=true
 android.useAndroidX=true
