--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -61,9 +61,10 @@ jobs:
     - name: Install ccache
       run: |
         sudo apt-get install -y ccache
-        ccache -o max_size=2G
+        ccache -o max_size=1G
         ccache -o hash_dir=false
-        ccache -o compiler_check=content
+        ccache -o compiler_check='%compiler% -dumpmachine; %compiler% -dumpversion'
+        ccache -zp
     - name: Build with Gradle
       env:
         NDK_CCACHE: ccache
@@ -76,6 +77,7 @@ jobs:
         echo 'org.gradle.jvmargs=-Xmx2048m' >> gradle.properties
         echo 'android.native.buildOutput=verbose' >> gradle.properties
         ./gradlew zipRelease zipDebug
+        ccache -s
     - name: Prepare artifact
       if: success()
       id: prepareArtifact
