--- a/crowdin.yml
+++ b/crowdin.yml
@@ -18,7 +18,7 @@
 files: [
  {
   "source" : "/app/src/main/res/values/strings.xml",
-  "translation" : "/app/src/main/res/values-%android_code%/%original_file_name%",
+  "translation" : "/app/src/main/res/values-%two_letters_code%/%original_file_name%",
   "type": "android",
   "dest": "/app/strings.xml",
   "skip_untranslated_strings": true
