--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -96,7 +96,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: mappings
-        path: "core/build/outputs/mapping/release"
+        path: |
+          "core/build/outputs/mapping/release"
+          "app/build/outputs/mapping/release"
     - name: Post to channel
       if: ${{ github.event_name != 'pull_request' && success() && github.ref == 'refs/heads/master' }}
       env:
