[ci] Fix mappings uploading path

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -97,8 +97,8 @@ jobs:
       with:
         name: mappings
         path: |
-          "core/build/outputs/mapping/release"
-          "app/build/outputs/mapping/release"
+          core/build/outputs/mapping/release
+          app/build/outputs/mapping/release
     - name: Post to channel
       if: ${{ github.event_name != 'pull_request' && success() && github.ref == 'refs/heads/master' }}
       env:
