--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-android.experimental.enableNewResourceShrinker=true
-android.experimental.enableNewResourceShrinker.preciseShrinking=true
+
+# disable new resource shinker since it will change the resources id
+# which will be used by the core
+# android.experimental.enableNewResourceShrinker=true
+# android.experimental.enableNewResourceShrinker.preciseShrinking=true
 android.enableAppCompileTimeRClass=true
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
